--- a/package.json
+++ b/package.json
@@ -9,13 +9,28 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@prisma/client": "^5.22.0",
+    "@splinetool/react-spline": "^4.1.0",
+    "@splinetool/runtime": "^1.12.0",
+    "@types/pg": "^8.15.6",
+    "clsx": "^2.1.1",
+    "framer-motion": "^12.23.24",
+    "jose": "^6.1.2",
+    "lenis": "^1.3.15",
+    "lucide-react": "^0.554.0",
     "next": "16.0.3",
+    "nodemailer": "^7.0.10",
+    "pg": "^8.16.3",
+    "prisma": "^5.22.0",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "tailwind-merge": "^3.4.0",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/nodemailer": "^7.0.4",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
